<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetaljiActivity">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/labelaSifra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelaSifra" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />



    <!-- ************ -->

    <TextView
        android:id="@+id/labelaIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelaIme" />

    <TextView
        android:id="@+id/ime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <!-- ************ -->

    <TextView
        android:id="@+id/labelaPrezime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelaPrezime" />

    <TextView
        android:id="@+id/prezime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/slika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/labelaSlika"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/nazad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelaNazad" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>